tests/comp/sem/invalid/while_condition_not_boolean.mj
class A {

	public int foo;

	public void test() {
		/*** while (foo) { } ***/
	}

	public static void main(String[] args) {
	}

}
